crates/bitnet-inference/tests/snapshots/snapshot_wave34__w34_aggregate_metrics_multiple_runs.snap
---
source: crates/bitnet-inference/tests/snapshot_wave34.rs
expression: agg
---
AggregateMetrics {
    runs: 3,
    total_tokens: 60,
    total_duration: 3s,
    avg_tps: 25.0,
    min_tps: 25.0,
    max_tps: 25.0,
}
