crates/bitnet-inference/tests/snapshots/snapshot_wave34__w34_budget_stop_reason_display.snap
---
source: crates/bitnet-inference/tests/snapshot_wave34.rs
expression: displays
---
[
    "max_tokens",
    "time_limit",
    "memory_limit",
    "end_of_sequence",
    "user_stop",
]
