crates/bitnet-inference/tests/snapshots/snapshot_wave34__w34_builder_preset_deterministic_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave34.rs
expression: cfg
---
InferenceConfig {
    sampling: SamplingConfig {
        temperature: 0.0,
        top_k: 1,
        top_p: 1.0,
        repetition_penalty: 1.0,
        seed: Some(
            42,
        ),
    },
    generation: GenerationConfig {
        max_tokens: 128,
        stop_sequences: [],
        stop_token_ids: [],
        stream: false,
    },
    hardware: HardwareConfig {
        num_threads: 1,
        memory_limit_mb: 0,
    },
}
