crates/bitnet-inference/tests/snapshots/snapshot_wave34__w34_builder_validation_error_bad_temperature.snap
---
source: crates/bitnet-inference/tests/snapshot_wave34.rs
expression: err
---
temperature must be >= 0.0
