crates/bitnet-inference/tests/snapshots/snapshot_wave34__w34_builder_validation_error_bad_top_p.snap
---
source: crates/bitnet-inference/tests/snapshot_wave34.rs
expression: err
---
top_p must be in (0.0, 1.0]
